2009-05-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: also try `jot' as `seq' replacement.
	* tests/instmany-mans.test: Try BSD `jot' before resorting to a
	slow but portable shell loop.
	* tests/instmany-python.test: Likewise.
	* tests/instmany.test: Likewise.
	Suggestion by Peter O'Gorman.

	Fix test failure when pkg.m4 is not found, only pkg-config.
	* tests/vala5.test: Update comment, this test is not expected to
	fail any more.  Require valac version 0.7.0.  Skip if configure
	fails, could be due to unexpanded PKG_CHECK_MODULES or too old
	valac.
	Report by Simon Josefsson.

2009-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Automake 1.11.
	* configure.ac: Bump version to 1.11.
	* doc/automake.texi (Releases): Add line for 1.11.  Remove line
	for 1.10b.

	Fix maintainer-check failures.
	* automake.in (lang_vala_finish_target): Use `$(am__cd)' instead
	of plain `cd'.
	* tests/vala2.test: Use `rm -f' instead of `rm'.

	Revert Automake license to GPLv2+.
	Automake will move to GPLv3+ once the Exception statement has
	been rewritten to use the new GPLv3 exception language.  This
	change does not impact the COPYING file that may be installed
	by `automake --add-missing'.
	* COPYING: Revert to GPLv2.  All uses changed.
	* NEWS: Update.

	Rewrite NEWS for 1.11.
	* NEWS: Rewrite, merging 1.10b and 1.10c entries.

	Sync auxiliary files from upstream.
	* lib/config.guess, lib/config.sub, lib/texinfo.tex: Sync from
	upstream.

	Update release statistics, improve release-stats rule.
	* Makefile.am (release-stats): Output stderr of pstops in
	addition to catching it, for better debugging.
	* doc/automake.texi (Releases): Add line for 1.10.2.

	Cope with parallel BSD make -jN semantics.
	When BSD `make -jN' is used without `-B' which enables backwards
	compatible semantics, it may reuse the same shell for several
	commands within a rule; so ensure we do not leave it in a
	different directory, nor `exit 0' early in a multi-command rule.