@@ -31,8 +31,8 @@ limit=2500
 subdir=long_subdir_name_with_many_characters
 nfiles=81
 
-# Let's use `seq' or `jot' if available, they are faster than the loop.
-list=`(seq 1 $nfiles) 2>/dev/null || (jot $nfiles) 2>/dev/null || {
+# Let's use `seq' if available, it's faster than the loop.
+list=`(seq 1 $nfiles) 2>/dev/null || {
   i=1
   while test $i -le $nfiles; do
     echo $i
