@@ -27,7 +27,7 @@ limit=2500
 subdir=long_subdir_name_with_many_characters
 nfiles=81
 
-list=`(seq 1 $nfiles) 2>/dev/null || (jot $nfiles) 2>/dev/null || {
+list=`(seq 1 $nfiles) 2>/dev/null || {
   i=1
   while test $i -le $nfiles; do
     echo $i
