@@ -1,3 +1,11 @@
+2009-05-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Revert last patch, IRIX has an editor named `jot'.
+	* tests/instmany-mans.test: Do not try `jot'.
+	* tests/instmany-python.test: Likewise.
+	* tests/instmany.test: Likewise.
+	Report by Peter O'Gorman.
+
 2009-05-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	testsuite: also try `jot' as `seq' replacement.
